--- a/resources/templates/authenticator/netidaccess-os/wait/index.vm
+++ b/resources/templates/authenticator/netidaccess-os/wait/index.vm
@@ -35,36 +35,38 @@
  * http://velocity.apache.org/engine/devel/user-guide.html.
  *#
 
-#set ($page_symbol = "/assets/images/login-symbol.netid.svg")
+#set ($page_symbol = "/assets/images/login-symbol-netid.svg")
 
 #define($_body)
-<p class="h4 mb4 semibold center" id="poll_message">#message("${_templatePrefix}.view.title")</p>
+    #set($keyPrefix = "authenticator.netidaccess.service")
 
-<iframe id="autoStart" height="0" width="0" frameborder="0"></iframe>
+<div class="area center">
+    <h1>#message("${keyPrefix}.${_serviceMessage}")</h1>
+    <p id="poll_message">#message("${keyPrefix}.${_serviceMessage}")</p>
 
-<div class="px4 mb4">
-    <div class="loader center">
+    <div class="center p2">
         #parse("fragments/spinner")
     </div>
 </div>
 
-<form class="manuallink pb0 display-none">
-    <p class="h4 center">#message("${_templatePrefix}.view.manualstart")</p>
-    <a class="button button-fullwidth button-primary center" id="manualStart" type="submit">
-        #message("${_templatePrefix}.view.button.manualstart")</a>
-</form>
+    #parse("fragments/generic-poller")
+<script type="text/javascript" $!nonceAttr>
+    jQuery(document).ready(function () {
+        document.forms["cancel"].onsubmit =se.curity.authenticator.polling.start();
+
+        // Wait 10 seconds, then show cancel
+        setTimeout(function () {
+            jQuery(".manuallink").removeClass("display-none");
+        }, 10000);
+    });
+</script>
 <form name="cancel" action="cancel" class="manuallink display-none" method="get">
     <button type="submit" class="button button-fullwidth button-danger-outline">#message($_messages,
         "${_templatePrefix}.view.button.cancel")</button>
 </form>
-<form action="$_action" method="post" id="pollingDone" class="display-none">
+<form action="$_action" method="post" class="display-none" id="pollingDone">
     <input type="hidden" name="_pollingDone" value="true"/>
 </form>
-
-#set($keyPrefix = "authenticator.netidaccess.service")
-#parse("fragments/generic-poller")
-#parse("authenticator/netidaccess/launch/handle-auto-start-uri")
-#parse("fragments/authentication-app-launcher")
 
 #end
 
