--- a/src/main/resources/templates/authenticator/netidaccess-os/launch/index.vm
+++ b/src/main/resources/templates/authenticator/netidaccess-os/launch/index.vm
@@ -61,7 +61,7 @@
     <input type="hidden" name="_pollingDone" value="true"/>
 </form>
 
-#set($keyPrefix = "authenticator.netidaccess.service")
+#set($keyPrefix = "authenticator.netidaccess-os.service")
 #parse("fragments/generic-poller")
 #parse("authenticator/netidaccess-os/launch/handle-auto-start-uri")
 #parse("fragments/authentication-app-launcher")
