--- a/src/main/resources/templates/authenticator/netidaccess-os/wait/index.vm
+++ b/src/main/resources/templates/authenticator/netidaccess-os/wait/index.vm
@@ -38,7 +38,7 @@
 #set ($page_symbol = "/assets/images/login-symbol-netid.svg")
 
 #define($_body)
-    #set($keyPrefix = "authenticator.netidaccess.service")
+    #set($keyPrefix = "authenticator.netidaccess-os.service")
 
 <div class="area center">
     <h1>#message("${keyPrefix}.${_serviceMessage}")</h1>
